<resources>
    <string name="app_name">Last_hw</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="fatherr">Отчество</string>
    <string name="year">Год</string>
    <string name="school">Школа</string>
    <string name="city">Город</string>
    <string name="exp">Опыт программирования</string>
    <string name="know">Знание языков программирования</string>
</resources>
