<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_gravity="fill"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="left"
        android:layout_weight="1">

        <TextView
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/surname" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/fatherr"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/year"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/school"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/city"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/exp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/know"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="26dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="26dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="26dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="26dp" />

    </LinearLayout>

    <CalendarView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"/>

</LinearLayout>